Content Children Complete

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,1 @@
-  <h1>Parent Component</h1>
-  <app-child>
-      <p #para>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. A reiciendis sed distinctio quo repellat atque nobis. Tenetur facilis cum magnam laudantium pariatur corporis quasi modi qui nisi tempora rem ex, rerum odio doloremque, illum id facere! Ad, dolore saepe mollitia odio quam nam. Voluptatibus pedit est, debitis sunt at recusandae? Et neque, velit accusamus, a iure perspiciatis quibusdam commodi eligendi, nulla ab nesciunt eos iusto?
-      </p>
-      <br>
-      <br>
-      <app-test></app-test>
-  </app-child>
+<app-parent></app-parent>
