--- a/src/app/parent/parent.component.html
+++ b/src/app/parent/parent.component.html
@@ -1,1 +1,33 @@
-<p>parent works!</p>
+<h1>Parent Component</h1>
+<app-child>
+    <p #para>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. A reiciendis sed distinctio quo repellat atque nobis.
+        Tenetur facilis cum magnam laudantium pariatur corporis quasi modi qui nisi tempora rem ex, rerum odio
+        doloremque, illum id facere! Ad, dolore saepe mollitia odio quam nam. Voluptatibus pedit est, debitis sunt at
+        recusandae? Et neque, velit accusamus, a iure perspiciatis quibusdam commodi eligendi, nulla ab nesciunt eos
+        iusto?
+    </p>
+    <br>
+    <p #para>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, quis!sto?
+    </p>
+    <br>
+    <p #para>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta laudantium corporis, quam ipsa esse quaerat.
+        Culpa obcaecati voluptate libero illo?iusto?
+    </p>
+    <br>
+    <p #para>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla voluptates vero ipsa vitae, illo, doloribus iusto
+        aliquam aperiam culpa magnam hic. Obcaecati at explicabo id, est nostrum reiciendis odit esse pariatur deserunt
+        a? Deleniti debitis suscipit qui hic magni et voluptatibus quod, illo porro veritatis dolorum pariatur officia,
+        non blanditiis. debitis sunt at recusandae? Et neque, velit accusamus, a iure perspiciatis quibusdam commodi
+        eligendi, nulla ab nesciunt eos iusto?
+    </p>
+    <br>
+
+    <br>
+    <app-test [name]="'Amit Patel'"></app-test>
+    <app-test [name]="'Shura Sekh'"></app-test>
+    <app-test [name]="'Akbar Khan'"></app-test>
+</app-child>
